--- a/library.html
+++ b/library.html
@@ -4,7 +4,7 @@
 	<!--<script type="text/javascript" src="test.js"></script>-->
 	<title>Library</title>
 	<link rel="stylesheet" type="text/css" href="library.css"/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="jquery.cookie.js"></script>
 </head>
 <body>
